--- a/style.css
+++ b/style.css
@@ -773,7 +773,7 @@ footer i{
 footer p{
   margin-top: -5px;
 }
-@media (min-width:700px) and (max-width:1150px){
+@media (min-width:600px) and (max-width:1150px){
   *{
     margin: 0%;
     padding: 0%;
@@ -872,11 +872,12 @@ footer p{
     padding: 30px;
   }
 }
-@media (max-width:700px){
+@media (max-width:600px){
   *{
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
+    /* outline: 1px solid red; */
   }
   nav{
     padding: 30px;
