--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+a{
+  text-decoration: none;
+  border-bottom: none;
+}
 * {
   margin: 0;
   padding: 0;
@@ -10,29 +14,11 @@
 :root{
   --p-font: 18px;
 }
-nav {
+nav{
   width: 100vw;
-  height: 50px;
-  background-color: black;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 50px;
   position: fixed;
   top: 0px;
   z-index: 1;
-}
-.logo {
-  font-size: 50px;
-}
-nav ul {
-  display: flex;
-  gap: 30px;
-}
-nav li {
-  list-style-type: none;
-  color: white;
 }
 nav li:hover::after {
   content: "";
@@ -49,12 +35,6 @@ nav li:hover::after {
   100% {
     width: 100%;
   }
-}
-.info h1{
-  font-size: 50px;
-}
-.info p{
-  font-size: 30px;
 }
 .info{
   background: url(./bg.jpg);
@@ -82,80 +62,28 @@ nav li:hover::after {
   opacity: 0.5;
   background-color: rgb(0, 0, 0);
 }
-#about{
-  box-shadow: rgba(0, 0, 0, 0.322) 2px 2px 10px;
-  height: 29rem;
-  width: 70rem;
-  padding: 30px;
-  margin: auto;
-  margin-top: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-direction: row-reverse;
+.container{
+  height: fit-content;
 }
-.profile-info{
-  width: 31.5rem;
+.profile-info p{
+  margin-bottom: 0;
 }
-.profile{
-  display: flex;
-  gap: 20px;
-}
-.profile img{
-  height: 200px;
-  width: 200px;
-}
-.profile p{
-  margin: 0;
-}
-.skills{
-  margin-top: 20px;
+.html-range p,.css-range p,.javascript-range p{
+  height: fit-content;
 }
 .range{
-  width: 500px;
+  width: 100%;
   height: 10px;
-  background-color: rgba(128, 128, 128, 0.315);
-  margin-bottom: -10px;
+  background-color: rgb(202, 202, 207);
 }
-.html-range{
-  display: flex;
-  justify-content: space-between;
-}
-.html{
+.range div{
   background-color: blue;
-  width: 80%;
   height: 100%;
-}
-.css-range{
-  display: flex;
-  justify-content: space-between;
-}
-.css{
-  background-color: blue;
-  width: 50%;
-  height: 100%;
-}
-.javascript-range{
-  display: flex;
-  justify-content: space-between;
-}
-.javascript{
-  background-color: blue;
-  width: 5%;
-  height: 100%;
-}
-.about-me{
-  width: 33rem;
-  min-width: 40%;
-}
-.about-me h2{
-  margin-bottom: 30px;
-  font-size: 30px;
 }
 .about-me h2::after{
   content: "";
   display: block;
-  width: 60px;
+  width: 13%;
   height: 3px;
   background-color: blue;
 }
@@ -163,233 +91,8 @@ nav li:hover::after {
   font-size: var(--p-font);
   margin: 0;
 }
-.resume-info{
-  margin: auto;
-  margin-top: 100px;
-  text-align: center;
-}
-.resume-info h1::after{
-  content: "";
-  display: block;
-  width: 70px;
-  height: 3px;
-  background-color: blue;
-  margin: auto;
-  margin-top: 15px;
-}
-.resume-info p{
-  margin-top: 15px;
-}
-.resume-details{
-  margin: auto;
-  margin-top: 50px;
-  width: 70rem;
-}
-.education{
-  position: relative;
-}
-.summary h1::after{
-  content: "";
-  display: block;
-  width: 2px;
-  height: 210px;
-  background-color: blue;
-  margin-left: 8px;
-  margin-top: 30px;
-}
-.summary{
-  display: flex;
-}
-#brandon{
-  position: absolute;
-  top: 55px;
-  background-color: white;
-  border: solid;
-  border-width: 2px;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  border-color: blue;
-}
-#brandon h2{
-  margin-left: 30px;
-  margin-top: -7px;
-  font-weight: 400;
-  font-size: 20px;
-  width: 500px;
-}
-#brandon p{
-  margin-top: 10px;
-  margin-left: 30px;
-  width: 500px;
-  font-size: var(--p-font);
-  font-style: italic;
-}
-#brandon ul{
-  margin-top: 10px;
-  margin-left: 50px;
-  width: 500px;
-}
-#brandon li{
-  margin-top: 10px;
-  font-size: var(--p-font);
-}
-.edu h1::after{
-  content: "";
-  display: block;
-  width: 2px;
-  height: 392px;
-  background-color: blue;
-  margin-top:30px;
-}
-.edu h1{
-  position: absolute;
-  left: 0px;
-  top: 300px;
-}
-.edu{
-  display: flex;
-}
-#master{
-  position: absolute;
-  top: 360px;
-  left: 0px;
-  background-color: white;
-  border: solid;
-  border-width: 2px;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  border-color: blue;
-}
-#master h2{
-  margin-left: 30px;
-  margin-top: -7px;
-  font-weight: 400;
-  font-size: 20px;
-  width: 500px;
-}
-#master p{
-  margin-top: 10px;
-  margin-left: 30px;
-  width: 500px;
-  font-size: var(--p-font);
-}
-#bachelor{
-  position: absolute;
-  top: 580px;
-  left: 0px;
-  background-color: white;
-  border: solid;
-  border-width: 2px;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  border-color: blue;
-}
-#bachelor h2{
-  margin-left: 30px;
-  margin-top: -7px;
-  font-weight: 400;
-  font-size: 20px;
-  width: 500px;
-}
-#bachelor p{
-  margin-top: 10px;
-  margin-left: 30px;
-  width: 500px;
-  font-size: var(--p-font);
-}
-.pro-experience{
-  position: relative;
-}
-.pro-experience  h1::after{
-  content: "";
-  display: block;
-  width: 2px;
-  height: 710px;
-  background-color: blue;
-  margin-left: 8px;
-  margin-top: 15px;
-}
-.pro-experience h1{
-  width: 600px;
-  position: absolute;
-  left: 550px;
-  top: -280px;
-}
-#senior{
-  position: absolute;
-  top: -230px;
-  left: 550px;
-  background-color: white;
-  border: solid;
-  border-width: 2px;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  border-color: blue;
-}
-#senior h2{
-  margin-left: 30px;
-  margin-top: -7px;
-  font-weight: 400;
-  font-size: 20px;
-  width: 500px;
-}
-#senior p{
-  margin-top: 10px;
-  margin-left: 30px;
-  width: 500px;
-  font-size: var(--p-font);
-  font-style: italic;
-}
-#senior ul{
-  margin-top: 10px;
-  margin-left: 50px;
-  width: 500px;
-}
-#senior li{
-  margin-top: 10px;
-  font-size: var(--p-font);
-}
-#specialist{
-  position: absolute;
-  top: 120px;
-  left: 550px;
-  background-color: white;
-  border: solid;
-  border-width: 2px;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  border-color: blue;
-}
-#specialist h2{
-  margin-left: 30px;
-  margin-top: -7px;
-  font-weight: 400;
-  font-size: 20px;
-  width: 500px;
-}
-#specialist p{
-  margin-top: 10px;
-  margin-left: 30px;
-  width: 500px;
-  font-size: var(--p-font);
-  font-style: italic;
-}
-#specialist ul{
-  margin-top: 10px;
-  margin-left: 50px;
-  width: 500px;
-}
-#specialist li{
-  margin-top: 10px;
-  font-size: var(--p-font);
-}
 #services{
-  margin-top: 40rem;
+  margin-top: 10rem;
   text-align: center;
 }
 .services-info h1::after{
@@ -508,7 +211,6 @@ i{
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  height: 400px;
   width: 100vw;
   color: white;
   display: flex;
@@ -598,6 +300,8 @@ i{
   align-items: center;
   justify-content: space-between;
   width: 500px;
+  padding-bottom: 10px;
+  border-bottom: 1px dashed;
 }
 .portrait p{
   margin-top: 10px;
@@ -608,23 +312,6 @@ i{
   text-align: left;
   font-weight: 300;
   font-size: 23px;
-}
-.portrait h2::after{
-  content: "";
-  margin-top: 10px;
-  display: block;
-  width: 250px;
-  border: 1px dashed white;
-  background-color: rgba(0, 0, 0, 0.404);
-}
-.portrait p::after{
-  content: "";
-  margin-top: 10px;
-  margin-left: -2px;
-  display: block;
-  border: 1px dashed white;
-  width: 250px;
-  background-color: rgba(0, 0, 0, 0.404);
 }
 #contact{
   margin-top: 10rem;
@@ -645,7 +332,6 @@ i{
   display: flex;
   justify-content: space-around;
   width: 80vw;
-  height: 120px;
   box-shadow: rgba(0, 0, 0, 0.171) 2px 2px 15px;
 }
 .address{
@@ -717,22 +403,26 @@ i{
   height: 30px;
   width: 49%;
   padding: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.281);
 }
 .mail{
   flex: 1 1 250px;
   height: 30px;
   width: 49%;
   padding: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.281);
 }
 .subject{
   height: 30px;
   width: 100%;
   padding: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.281);
 }
 .message{
   height: 200px;
   width: 100%;
   padding: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.281);
 }
 .input button{
   padding: 11px;
@@ -773,7 +463,7 @@ footer i{
 footer p{
   margin-top: -5px;
 }
-@media (min-width:700px) and (max-width:1150px){
+/* @media (min-width:700px) and (max-width:1150px){
   *{
     margin: 0%;
     padding: 0%;
@@ -873,12 +563,6 @@ footer p{
   }
 }
 @media (max-width:700px){
-  *{
-    padding: 0%;
-    margin: 0%;
-    box-sizing: border-box;
-    background-size: 100vw;
-  }
   nav{
     padding: 30px;
     width: 100vw;
@@ -1096,4 +780,4 @@ footer p{
     height: 350px;
     padding: 30px;
   }
-}
+} */
